# cityu-master-data-engineering-project

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.json
config/sitemaps/: baidu_news.sitemap.json  google_news.sitemap.json
data/: topic_全运会女子乒乓球比赛_20251120_132104.json  topic_全运会篮球比赛_20251120_133147.json
data project/: README.md  requirements.txt
data project/data/: topic_全运会男子110米栏比赛_20251120_132726.json
data project/docs/: CHANGELOG.md  INTELLIGENT_SOURCE_FINDER.md  PROJECT_PLAN.md  QUICKSTART_DEEPSEEK.md  TOPIC_SEARCH_GUIDE.md  TOPIC_SEARCH_QUICKREF.md  项目状态总结.md
data project/output/: 全运会男子110米栏比赛_20251120_摘要.html
data project/scripts/: search_cli.py  test_deepseek.py  topic_search.py
data project/src/: entity_extractor.py  init_database.py  scraper.py
docs/: DATABASE_QUICKSTART.md  DATABASE_README.md  DEEPSEEK_INTEGRATION.md  README.md  文档索引.md
examples/NationalGames/: National_Game_summary.html  cleaned_articles.json  deduplicated_articles.json  entities.json  raw_articles.json  scoring_result.json  summary.json  timeline.json
examples/NvidiaH20GPU/: Nvidia_H20_GPU_summary.html  cleaned_articles.json  entities.json  raw_articles.json  scoring_result.json  summary.json  timeline.json
examples/Trump&Epstein/: Trump__Epstein_summary.html  (+6 more)
output/: 全运会篮球比赛_20251120_摘要.html
scripts/: main.py  score.py  start.py  test_deepseek.py  topic_search.py  web_app.py
src/: db_utils.py  html_generator.py  intelligent_source_finder.py  path_config.py  scraper.py  search_engine.py  summarizer.py
templates/: articles.html
(+22 files in other folders)
